--- a/html_part_one/feature/Hello_world_und_Dateiendugen.html
+++ b/html_part_one/feature/Hello_world_und_Dateiendugen.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>Hello Enis</title>
 </head>
 <body>
-<h1>Meine erste Überschrift</h1>
-  <p>Hallo Welt!</p>
+    <h1>Meine erste Überschrift</h1>
+    <p>Hallo Welt!</p>
 </body>
 </html>
