--- a/html_part_one/feature/HTML_code_Kapitel-1_Bilder.html
+++ b/html_part_one/feature/HTML_code_Kapitel-1_Bilder.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Bilder</h1>
-<img src="tropfen.jpg" alt="tropfen">
+<img width="400" height="300" src="tropfen.jpg" alt="tropfen">
 </body>
 </html>
